# chromatic-warfare

./: .gitignore  PROMPT.md  README.md  RULES.md  bot_lib.py  bot_simple.py  game_core.py  game_server.py  game_viewer.html  pyrightconfig.json
bot/: bot_easy.py  bot_hard.py  bot_medium.py  bot_suicidal.py  botlib.py
game/: README.md  botlib.py  config.py  core.py  pyproject.toml  server.py  viewer.html
game/bot/: README.md  easy.py  hard.py  lib.py  medium.py  suicidal.py
src/: botlib.py  server.py  viewer.html
src/bot/: easy.py  hard.py  medium.py
viewer/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
viewer/src/: GameViewer.js  main.js  style.css
