[project]
name = "chromatic-warfare"
version = "0.1.0"
description = "A competitive turn-based strategy game system designed for bots."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Tomáš Sláma" }]
keywords = ["game", "strategy", "bots", "websockets", "competitive"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Games/Entertainment :: Turn Based Strategy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = ["websockets"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.urls]
Homepage = "https://cw.slama.dev/"
Repository = "https://github.com/xiaoxiae/chromatic-warfare"

[tool.pyright]
venvPath = "."
venv = "venv"

[tool.ruff]
line-length = 88
target-version = "py38"
extend-exclude = [".eggs", ".git", ".mypy_cache", ".venv", "venv"]
